# shuffgauss

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: cifar_sub.py  mnist.py  mnist_sci.py  mnist_sub.py
shuffgauss/: __init__.py  bounds.py  utils.py
